# payment-test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  bandit-report.json  main.py  pyproject.toml
.github/: QUICK_START.md  README.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 2f6c2c1f7451_change_expires_at_to_timestamp_with_.py
app/api/: deps.py
app/api/v1/: api.py  payments.py
app/core/: config.py  database_manager.py  error_handlers.py  errors.py
app/models/: __init__.py  base.py  merchant.py  payment.py  psp.py  store.py  store_payment_config.py  terminal.py
app/repositories/: base_mixins.py  filter_constants.py  payment_repository.py  terminal_repository.py
app/schemas/: base.py  common.py  payment.py  paypay.py
app/services/: payment_poller.py  payment_service.py  paypay_service.py
tests/: conftest.py
tests/api/: test_health.py
tests/unit/: test_config.py  test_database.py  test_models.py
